# easy-bbox

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yml  test.yml
_modules/: index.html
_modules/easy_bbox/: bbox.html  utils.html
_sources/: index.rst.txt
docs/source/: conf.py
src/easy_bbox/: __init__.py  bbox.py  utils.py
tests/: test_bbox.py  test_bbox_utils.py
